--- a/tests/cassettes/subscenter/test_query_query_season_episode.yaml
+++ b/tests/cassettes/subscenter/test_query_query_season_episode.yaml
@@ -6,15 +6,14 @@ interactions:
     method: GET
     uri: http://subscenter.cinemast.com/he/cinemast/data/series/sb/the-big-bang-theory/7/5/
   response:
-    body: {string: !!python/unicode '{"he": {"1.Private Translated": {"hdtv": {"1":
-        {"created_by": "\u05d0\u05e0\u05d5\u05e0\u05d9\u05de\u05d9", "created_by_id":
-        0, "created_on": "18.10.2013 ,16:24", "credits": {"3": {"\u05ea\u05e8\u05d2\u05d5\u05dd
-        \u05d5\u05e1\u05e0\u05db\u05e8\u05d5\u05df": "\u05e1\u05d9\u05d2\u05e0\u05d8"}},
-        "downloaded": 2403, "files_count": 1, "hearing_impaired": 0, "id": 265237,
-        "is_sync": 0, "key": "146367a10dcaac068ae571a53b7687f4", "notes": "", "sat_count":
-        0, "subtitle_version": "The.Big.Bang.Theory.S07E05.HDTV.x264-LOL", "vip":
-        0}, "2": {"created_by": "\u05d0\u05e0\u05d5\u05e0\u05d9\u05de\u05d9", "created_by_id":
-        0, "created_on": "18.10.2013 ,16:24", "credits": {"3": {"\u05ea\u05e8\u05d2\u05d5\u05dd
+    body: {string: '{"he": {"1.Private Translated": {"hdtv": {"1": {"created_by":
+        "\u05d0\u05e0\u05d5\u05e0\u05d9\u05de\u05d9", "created_by_id": 0, "created_on":
+        "18.10.2013 ,16:24", "credits": {"3": {"\u05ea\u05e8\u05d2\u05d5\u05dd \u05d5\u05e1\u05e0\u05db\u05e8\u05d5\u05df":
+        "\u05e1\u05d9\u05d2\u05e0\u05d8"}}, "downloaded": 2403, "files_count": 1,
+        "hearing_impaired": 0, "id": 265237, "is_sync": 0, "key": "146367a10dcaac068ae571a53b7687f4",
+        "notes": "", "sat_count": 0, "subtitle_version": "The.Big.Bang.Theory.S07E05.HDTV.x264-LOL",
+        "vip": 0}, "2": {"created_by": "\u05d0\u05e0\u05d5\u05e0\u05d9\u05de\u05d9",
+        "created_by_id": 0, "created_on": "18.10.2013 ,16:24", "credits": {"3": {"\u05ea\u05e8\u05d2\u05d5\u05dd
         \u05d5\u05e1\u05e0\u05db\u05e8\u05d5\u05df": "\u05e1\u05d9\u05d2\u05e0\u05d8"}},
         "downloaded": 1882, "files_count": 1, "hearing_impaired": 0, "id": 265237,
         "is_sync": 0, "key": "ce8e4086da2688eb6ab183c0d831e855", "notes": "", "sat_count":
@@ -45,14 +44,14 @@ interactions:
         "subtitle_version": "The.Big.Bang.Theory.S07E05.480p.HDTV.x264-mSD", "vip":
         0}}}}}'}
     headers:
-      accept-ranges: [bytes]
-      connection: [keep-alive]
-      content-length: ['2994']
-      content-type: [text/html]
-      date: ['Sun, 13 Sep 2015 20:33:22 GMT']
-      etag: ['"55ef254c-bb2"']
-      last-modified: ['Tue, 08 Sep 2015 18:13:32 GMT']
-      server: [nginx/1.8.0]
-      vary: [Accept-Encoding]
+      Accept-Ranges: [bytes]
+      Connection: [keep-alive]
+      Content-Length: ['2994']
+      Content-Type: [text/html]
+      Date: ['Mon, 14 Sep 2015 11:41:32 GMT']
+      ETag: ['"55ef254c-bb2"']
+      Last-Modified: ['Tue, 08 Sep 2015 18:13:32 GMT']
+      Server: [nginx/1.8.0]
+      Vary: [Accept-Encoding]
     status: {code: 200, message: OK}
 version: 1
