--- a/tests/cassettes/thesubdb/test_query_wrong_hash.yaml
+++ b/tests/cassettes/thesubdb/test_query_wrong_hash.yaml
@@ -2,15 +2,15 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: ['SubDB/1.0 (subliminal/0.8.0; https://github.com/Diaoul/subliminal)']
+      User-Agent: ['SubDB/1.0 (subliminal/1.1; https://github.com/Diaoul/subliminal)']
     method: GET
     uri: http://api.thesubdb.com/?action=search&hash=11223344556677899877665544332211
   response:
-    body: {string: ''}
+    body: {string: !!python/unicode ''}
     headers:
-      Connection: [keep-alive]
-      Content-Type: [text/html]
-      Date: ['Sat, 04 Jul 2015 20:26:34 GMT']
-      Server: [nginx/1.6.0]
+      connection: [keep-alive]
+      content-type: [text/html]
+      date: ['Thu, 29 Oct 2015 22:52:30 GMT']
+      server: [nginx/1.6.0]
     status: {code: 404, message: Not Found}
 version: 1
