--- a/tests/cassettes/thesubdb/test_query_wrong_hash.yaml
+++ b/tests/cassettes/thesubdb/test_query_wrong_hash.yaml
@@ -2,15 +2,21 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: ['SubDB/1.0 (subliminal/1.1; https://github.com/Diaoul/subliminal)']
+      Accept: ['*/*']
+      Accept-Encoding: ['gzip, deflate']
+      Connection: [keep-alive]
+      User-Agent: ['SubDB/1.0 (subliminal/2.0; https://github.com/Diaoul/subliminal)']
     method: GET
     uri: http://api.thesubdb.com/?action=search&hash=11223344556677899877665544332211
   response:
-    body: {string: !!python/unicode ''}
+    body:
+      string: !!binary |
+        H4sIAAAAAAAAAwMAAAAAAAAAAAA=
     headers:
       connection: [keep-alive]
+      content-encoding: [gzip]
       content-type: [text/html]
-      date: ['Thu, 29 Oct 2015 22:52:30 GMT']
+      date: ['Tue, 09 Feb 2016 16:18:40 GMT']
       server: [nginx/1.6.0]
     status: {code: 404, message: Not Found}
 version: 1
