--- a/tests/cassettes/thesubdb/test_list_subtitles.yaml
+++ b/tests/cassettes/thesubdb/test_list_subtitles.yaml
@@ -2,15 +2,21 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: ['SubDB/1.0 (subliminal/1.1; https://github.com/Diaoul/subliminal)']
+      Accept: ['*/*']
+      Accept-Encoding: ['gzip, deflate']
+      Connection: [keep-alive]
+      User-Agent: ['SubDB/1.0 (subliminal/2.0; https://github.com/Diaoul/subliminal)']
     method: GET
     uri: http://api.thesubdb.com/?action=search&hash=9dbbfb7ba81c9a6237237dae8589fccc
   response:
-    body: {string: !!python/unicode 'en,es,fr,pt'}
+    body:
+      string: !!binary |
+        H4sIAAAAAAAAA0vN00kt1kkr0ikoAQBr9k5KCwAAAA==
     headers:
       connection: [keep-alive]
+      content-encoding: [gzip]
       content-type: [text/html]
-      date: ['Thu, 29 Oct 2015 22:52:30 GMT']
+      date: ['Tue, 09 Feb 2016 16:18:41 GMT']
       server: [nginx/1.6.0]
     status: {code: 200, message: OK}
 version: 1
