--- a/tests/cassettes/thesubdb/test_query.yaml
+++ b/tests/cassettes/thesubdb/test_query.yaml
@@ -2,15 +2,21 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: ['SubDB/1.0 (subliminal/1.1; https://github.com/Diaoul/subliminal)']
+      Accept: ['*/*']
+      Accept-Encoding: ['gzip, deflate']
+      Connection: [keep-alive]
+      User-Agent: ['SubDB/1.0 (subliminal/2.0; https://github.com/Diaoul/subliminal)']
     method: GET
     uri: http://api.thesubdb.com/?action=search&hash=ad32876133355929d814457537e12dc2
   response:
-    body: {string: !!python/unicode 'en,pt'}
+    body:
+      string: !!binary |
+        H4sIAAAAAAAAA0vN0ykoAQBH/AkFBQAAAA==
     headers:
       connection: [keep-alive]
+      content-encoding: [gzip]
       content-type: [text/html]
-      date: ['Thu, 29 Oct 2015 22:52:29 GMT']
+      date: ['Tue, 09 Feb 2016 16:18:40 GMT']
       server: [nginx/1.6.0]
     status: {code: 200, message: OK}
 version: 1
