--- a/tests/cassettes/omdb/test_refine_episode.yaml
+++ b/tests/cassettes/omdb/test_refine_episode.yaml
@@ -19,17 +19,17 @@ interactions:
     headers:
       access-control-allow-origin: ['*']
       cache-control: ['public, max-age=86400']
-      cf-cache-status: [HIT]
-      cf-ray: [287488c544b63c35-CDG]
+      cf-cache-status: [EXPIRED]
+      cf-ray: [29ba4153c74914c1-CDG]
       connection: [keep-alive]
       content-encoding: [gzip]
       content-type: [application/json; charset=utf-8]
-      date: ['Mon, 21 Mar 2016 21:35:32 GMT']
-      expires: ['Tue, 22 Mar 2016 21:35:32 GMT']
-      last-modified: ['Mon, 21 Mar 2016 11:25:16 GMT']
+      date: ['Sat, 30 Apr 2016 10:19:25 GMT']
+      expires: ['Sun, 01 May 2016 10:19:25 GMT']
+      last-modified: ['Sat, 30 Apr 2016 10:19:23 GMT']
       server: [cloudflare-nginx]
-      set-cookie: ['__cfduid=d5267bf24898b7accbc5c2e18253408e71458596132; expires=Tue,
-          21-Mar-17 21:35:32 GMT; path=/; domain=.omdbapi.com; HttpOnly']
+      set-cookie: ['__cfduid=d4ffb0be16a0f18905b3f68a6c5b6fc041462011564; expires=Sun,
+          30-Apr-17 10:19:24 GMT; path=/; domain=.omdbapi.com; HttpOnly']
       vary: [Accept-Encoding]
       x-aspnet-version: [4.0.30319]
       x-powered-by: [ASP.NET]
