--- a/docs/cassettes/test_usage.yaml
+++ b/docs/cassettes/test_usage.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: http://podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body: {string: "<html>\r\n<head><title>302 Found</title></head>\r\n<body bgcolor=\"\
         white\">\r\n<center><h1>302 Found</h1></center>\r\n<hr><center>nginx/1.8.0</center>\r\
@@ -17,7 +17,7 @@ interactions:
       Content-Length: ['160']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:06 GMT']
-      Location: ['http://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
+      Location: ['http://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
       Server: [nginx/1.8.0]
     status: {code: 302, message: Moved Temporarily}
 - request:
@@ -28,7 +28,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: http://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body: {string: "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n\
         <body bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\
@@ -38,7 +38,7 @@ interactions:
       Content-Length: ['184']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:07 GMT']
-      Location: ['https://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
+      Location: ['https://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
       Server: [nginx/1.8.0]
     status: {code: 301, message: Moved Permanently}
 - request:
@@ -49,7 +49,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: https://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: https://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body:
       string: !!binary |
@@ -85,7 +85,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: http://podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body: {string: "<html>\r\n<head><title>302 Found</title></head>\r\n<body bgcolor=\"\
         white\">\r\n<center><h1>302 Found</h1></center>\r\n<hr><center>nginx/1.8.0</center>\r\
@@ -95,7 +95,7 @@ interactions:
       Content-Length: ['160']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:07 GMT']
-      Location: ['http://www.podnapisi.net/subtitles/ZtAW/download?container=zip']
+      Location: ['http://www.podnapisi.eu/subtitles/ZtAW/download?container=zip']
       Server: [nginx/1.8.0]
     status: {code: 302, message: Moved Temporarily}
 - request:
@@ -106,7 +106,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://www.podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: http://www.podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body: {string: "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n\
         <body bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\
@@ -116,7 +116,7 @@ interactions:
       Content-Length: ['184']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:07 GMT']
-      Location: ['https://www.podnapisi.net/subtitles/ZtAW/download?container=zip']
+      Location: ['https://www.podnapisi.eu/subtitles/ZtAW/download?container=zip']
       Server: [nginx/1.8.0]
     status: {code: 301, message: Moved Permanently}
 - request:
@@ -127,7 +127,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: https://www.podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: https://www.podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body:
       string: !!binary |
@@ -335,7 +335,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: http://podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body: {string: "<html>\r\n<head><title>302 Found</title></head>\r\n<body bgcolor=\"\
         white\">\r\n<center><h1>302 Found</h1></center>\r\n<hr><center>nginx/1.8.0</center>\r\
@@ -345,7 +345,7 @@ interactions:
       Content-Length: ['160']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:07 GMT']
-      Location: ['http://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
+      Location: ['http://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
       Server: [nginx/1.8.0]
     status: {code: 302, message: Moved Temporarily}
 - request:
@@ -356,7 +356,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: http://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body: {string: "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n\
         <body bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\
@@ -366,7 +366,7 @@ interactions:
       Content-Length: ['184']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:08 GMT']
-      Location: ['https://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
+      Location: ['https://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1']
       Server: [nginx/1.8.0]
     status: {code: 301, message: Moved Permanently}
 - request:
@@ -377,7 +377,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: https://www.podnapisi.net/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
+    uri: https://www.podnapisi.eu/subtitles/search/old?sTS=5&sL=hu&sTE=18&sK=The+Big+Bang+Theory&sXML=1
   response:
     body:
       string: !!binary |
@@ -413,7 +413,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: http://podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body: {string: "<html>\r\n<head><title>302 Found</title></head>\r\n<body bgcolor=\"\
         white\">\r\n<center><h1>302 Found</h1></center>\r\n<hr><center>nginx/1.8.0</center>\r\
@@ -423,7 +423,7 @@ interactions:
       Content-Length: ['160']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:08 GMT']
-      Location: ['http://www.podnapisi.net/subtitles/ZtAW/download?container=zip']
+      Location: ['http://www.podnapisi.eu/subtitles/ZtAW/download?container=zip']
       Server: [nginx/1.8.0]
     status: {code: 302, message: Moved Temporarily}
 - request:
@@ -434,7 +434,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://www.podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: http://www.podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body: {string: "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n\
         <body bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\
@@ -444,7 +444,7 @@ interactions:
       Content-Length: ['184']
       Content-Type: [text/html]
       Date: ['Wed, 23 Mar 2016 09:34:08 GMT']
-      Location: ['https://www.podnapisi.net/subtitles/ZtAW/download?container=zip']
+      Location: ['https://www.podnapisi.eu/subtitles/ZtAW/download?container=zip']
       Server: [nginx/1.8.0]
     status: {code: 301, message: Moved Permanently}
 - request:
@@ -455,7 +455,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: https://www.podnapisi.net/subtitles/ZtAW/download?container=zip
+    uri: https://www.podnapisi.eu/subtitles/ZtAW/download?container=zip
   response:
     body:
       string: !!binary |
