--- a/tests/cassettes/subscenter/test_login_bad_password.yaml
+++ b/tests/cassettes/subscenter/test_login_bad_password.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://www.subscenter.co/he/subscenter/accounts/login/
+    uri: http://www.subscenter.info/he/subscenter/accounts/login/
   response:
     body:
       string: !!binary |
@@ -204,7 +204,7 @@ interactions:
       Last-Modified: ['Thu, 11 Aug 2016 21:55:47 GMT']
       Server: [nginx/1.8.0]
       Set-Cookie: [csrftoken=8a049be3019c762947c9cfdec333386b; Max-Age=31449600; Path=/;,
-        'sessionid=1df1f78c0eeb7174e064c4c140d66eda; Domain=.subscenter.co; expires=Thu,
+        'sessionid=1df1f78c0eeb7174e064c4c140d66eda; Domain=.subscenter.info; expires=Thu,
           25-Aug-2016 21:55:47 GMT; Max-Age=1209600; Path=/;']
       Vary: [Accept-Encoding, Cookie]
     status: {code: 200, message: OK}
@@ -219,7 +219,7 @@ interactions:
       Cookie: [sessionid=1df1f78c0eeb7174e064c4c140d66eda; csrftoken=8a049be3019c762947c9cfdec333386b]
       User-Agent: [Subliminal/2.1]
     method: POST
-    uri: http://www.subscenter.co/he/subscenter/accounts/login/
+    uri: http://www.subscenter.info/he/subscenter/accounts/login/
   response:
     body:
       string: !!binary |
@@ -419,7 +419,7 @@ interactions:
       Last-Modified: ['Thu, 11 Aug 2016 21:55:47 GMT']
       Server: [nginx/1.8.0]
       Set-Cookie: [csrftoken=8a049be3019c762947c9cfdec333386b; Max-Age=31449600; Path=/;,
-        'sessionid=1df1f78c0eeb7174e064c4c140d66eda; Domain=.subscenter.co; expires=Thu,
+        'sessionid=1df1f78c0eeb7174e064c4c140d66eda; Domain=.subscenter.info; expires=Thu,
           25-Aug-2016 21:55:47 GMT; Max-Age=1209600; Path=/;']
       Vary: [Accept-Encoding, Cookie]
     status: {code: 200, message: OK}
