--- a/tests/cassettes/subscenter/test_search_url_titles_episode.yaml
+++ b/tests/cassettes/subscenter/test_search_url_titles_episode.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://www.subscenter.co/he/subtitle/search/?q=Dallas
+    uri: http://www.subscenter.info/he/subtitle/search/?q=Dallas
   response:
     body:
       string: !!binary |
