--- a/tests/cassettes/wizdom/test_search_imdb_id_no_suggestion.yaml
+++ b/tests/cassettes/wizdom/test_search_imdb_id_no_suggestion.yaml
@@ -5,9 +5,9 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.8.1]
+      User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://api.tmdb.org/3/search/tv?api_key=f7f51775877e0bb6703520952b3c7840&query=This%20is%20a%20test&language=en
+    uri: http://api.tmdb.org/3/search/tv?api_key=a51ee051bcd762543373903de296e0a3&query=This%20is%20a%20test&language=en
   response:
     body:
       string: !!binary |
@@ -18,19 +18,19 @@ interactions:
       Access-Control-Expose-Headers: ['ETag, X-RateLimit-Limit, X-RateLimit-Remaining,
           X-RateLimit-Reset, Retry-After']
       CF-Cache-Status: [MISS]
-      CF-RAY: [371209b1742b72b9-AMS]
+      CF-RAY: [3a98cb6f95f4727d-AMS]
       Cache-Control: ['public, max-age=28800']
       Connection: [keep-alive]
       Content-Encoding: [gzip]
       Content-Type: [application/json;charset=utf-8]
-      Date: ['Sun, 18 Jun 2017 23:30:41 GMT']
-      Expires: ['Mon, 19 Jun 2017 07:30:41 GMT']
+      Date: ['Fri, 06 Oct 2017 12:58:52 GMT']
+      Expires: ['Fri, 06 Oct 2017 20:58:52 GMT']
       Server: [cloudflare-nginx]
-      Set-Cookie: ['__cfduid=d3c6437ff9a62f570b7f1a115d7d6b90c1497828641; expires=Mon,
-          18-Jun-18 23:30:41 GMT; path=/; domain=.tmdb.org; HttpOnly']
+      Set-Cookie: ['__cfduid=d685d1e2d34b488434c8f67a72f1eedc81507294732; expires=Sat,
+          06-Oct-18 12:58:52 GMT; path=/; domain=.tmdb.org; HttpOnly']
       Vary: [Accept-Encoding]
       X-RateLimit-Limit: ['40']
       X-RateLimit-Remaining: ['38']
-      X-RateLimit-Reset: ['1497828646']
+      X-RateLimit-Reset: ['1507294739']
     status: {code: 200, message: OK}
 version: 1
