Added alternative titles support.

--- a/tests/cassettes/wizdom/test_list_subtitles_episode.yaml
+++ b/tests/cassettes/wizdom/test_list_subtitles_episode.yaml
@@ -1188,10 +1188,15 @@ interactions:
         08:19:57\",\"resolution\":\"1080p\",\"format\":\"WEB-DL\",\"video_codec\":\"h264\",\"release_group\":\"STRiFE\"},{\"id\":\"190029\",\"version\":\"Game.Of.Thrones.S07E07.The.Dragon.And.The.Wolf.720p.AMZN.WEB-DL.DDP5.1.H.264-GoT\",\"date\":\"2017-08-28
         08:19:57\",\"resolution\":\"720p\",\"format\":\"WEB-DL\",\"video_codec\":\"h264\",\"audio_codec\":\"EAC3\",\"release_group\":\"GoT\"}]}}}"}
     headers:
+      Accept-Ranges: [bytes]
+      Access-Control-Allow-Methods: ['GET, POST, OPTIONS']
       Access-Control-Allow-Origin: ['*']
       Connection: [keep-alive]
+      Content-Length: ['212802']
       Content-Type: [application/json]
-      Date: ['Fri, 06 Oct 2017 13:00:03 GMT']
+      Date: ['Thu, 30 Nov 2017 21:14:34 GMT']
+      ETag: ['"5a207499-33f42"']
+      Last-Modified: ['Thu, 30 Nov 2017 21:14:01 GMT']
       Server: [nginx/1.12.0]
     status: {code: 200, message: OK}
 version: 1
