--- a/tests/cassettes/wizdom/test_list_subtitles_movie.yaml
+++ b/tests/cassettes/wizdom/test_list_subtitles_movie.yaml
@@ -84,10 +84,15 @@ interactions:
         19:47:02\",\"resolution\":\"1080p\",\"format\":\"BluRay\",\"video_codec\":\"h264\",\"audio_codec\":\"DTS\",\"release_group\":\"PHD\"},{\"id\":\"66283\",\"version\":\"Man.Of.Steel.2013.1080p.BluRay.x264-SECTOR7.-[NORAR]-[PhAnToM]\",\"date\":\"2016-10-30
         14:42:20\",\"resolution\":\"1080p\",\"format\":\"BluRay\",\"video_codec\":\"h264\",\"release_group\":\"SECTOR7.-[NORAR]-[PhAnToM]\"}]}"}
     headers:
+      Accept-Ranges: [bytes]
+      Access-Control-Allow-Methods: ['GET, POST, OPTIONS']
       Access-Control-Allow-Origin: ['*']
       Connection: [keep-alive]
+      Content-Length: ['9590']
       Content-Type: [application/json]
-      Date: ['Fri, 06 Oct 2017 13:00:01 GMT']
+      Date: ['Thu, 30 Nov 2017 21:14:34 GMT']
+      ETag: ['"5a207498-2576"']
+      Last-Modified: ['Thu, 30 Nov 2017 21:14:00 GMT']
       Server: [nginx/1.12.0]
     status: {code: 200, message: OK}
 version: 1
