--- a/tests/cassettes/wizdom/test_search_imdb_id_no_suggestion.yaml
+++ b/tests/cassettes/wizdom/test_search_imdb_id_no_suggestion.yaml
@@ -17,20 +17,20 @@ interactions:
       Access-Control-Allow-Origin: ['*']
       Access-Control-Expose-Headers: ['ETag, X-RateLimit-Limit, X-RateLimit-Remaining,
           X-RateLimit-Reset, Retry-After']
-      CF-Cache-Status: [MISS]
-      CF-RAY: [3a98cb6f95f4727d-AMS]
+      CF-Cache-Status: [HIT]
+      CF-RAY: [3c60d04391956a3d-LHR]
       Cache-Control: ['public, max-age=28800']
       Connection: [keep-alive]
       Content-Encoding: [gzip]
       Content-Type: [application/json;charset=utf-8]
-      Date: ['Fri, 06 Oct 2017 12:58:52 GMT']
-      Expires: ['Fri, 06 Oct 2017 20:58:52 GMT']
+      Date: ['Thu, 30 Nov 2017 21:13:57 GMT']
+      Expires: ['Fri, 01 Dec 2017 05:13:57 GMT']
       Server: [cloudflare-nginx]
-      Set-Cookie: ['__cfduid=d685d1e2d34b488434c8f67a72f1eedc81507294732; expires=Sat,
-          06-Oct-18 12:58:52 GMT; path=/; domain=.tmdb.org; HttpOnly']
+      Set-Cookie: ['__cfduid=d7bafb49d82586819cb6ee120d371dec51512076437; expires=Fri,
+          30-Nov-18 21:13:57 GMT; path=/; domain=.tmdb.org; HttpOnly']
       Vary: [Accept-Encoding]
       X-RateLimit-Limit: ['40']
-      X-RateLimit-Remaining: ['38']
-      X-RateLimit-Reset: ['1507294739']
+      X-RateLimit-Remaining: ['39']
+      X-RateLimit-Reset: ['1512076411']
     status: {code: 200, message: OK}
 version: 1
