Removes unnecessary usage of text_type

--- a/tests/cassettes/greeksubtitles/test_list_subtitles_movie.yaml
+++ b/tests/cassettes/greeksubtitles/test_list_subtitles_movie.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://gr.greek-subtitles.com/search.php?name=Caf%C3%A9%20Society%202016
+    uri: http://gr.greek-subtitles.com/search.php?name=Ender's%20Game%202013
   response:
     body:
       string: !!binary |
