--- a/tests/cassettes/subs4free/test_list_subtitles_movie_no_results.yaml
+++ b/tests/cassettes/subs4free/test_list_subtitles_movie_no_results.yaml
@@ -8,7 +8,7 @@ interactions:
       Referer: ['https://www.sf4-industry.com']
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://www.sf4-industry.com/search_report.php?search=Caf%C3%A9%20Society&searchType=1
+    uri: https://www.sf4-industry.com/search_report.php?search=Ender's%20Game%202013&searchType=1
   response:
     body:
       string: !!binary |
@@ -143,7 +143,7 @@ interactions:
       Cookie: [PHPSESSID=bo7hmvudfobk0idjerl2vf04o6; __cfduid=dba043f9ef153069f8e78c19a0be638ac1546976289]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://www.sf4-industry.com/search_report.php?search=Caf%C3%A9%20Society%202016&searchType=1
+    uri: https://www.sf4-industry.com/search_report.php?search=enders%20game&searchType=1
   response:
     body:
       string: !!binary |
@@ -259,7 +259,6 @@ interactions:
       expires: ['Thu, 19 Nov 1981 08:52:00 GMT']
       pragma: [no-cache]
       server: [cloudflare]
-      transfer-encoding: [chunked]
       vary: [Accept-Encoding]
       x-content-type-options: [nosniff]
       x-frame-options: [SAMEORIGIN]
