--- a/tests/cassettes/subs4free/test_query_movie_no_results.yaml
+++ b/tests/cassettes/subs4free/test_query_movie_no_results.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://www.sf4-industry.com/search_report.php?search=Caf%C3%A9%20Society%202016&searchType=1
+    uri: https://www.sf4-industry.com/search_report.php?search=Ender's%20Game%202013&searchType=1
   response:
     body:
       string: !!binary |
