--- a/tests/cassettes/subz/test_download_subtitle_movie.yaml
+++ b/tests/cassettes/subz/test_download_subtitle_movie.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://subz.xyz/typeahead/Man%20of%20Steel
+    uri: https://subz.xyz/typeahead/man%20of%20steel
   response:
     body:
       string: !!binary |
