--- a/tests/cassettes/subz/test_get_show_links_episode.yaml
+++ b/tests/cassettes/subz/test_get_show_links_episode.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://subz.xyz/typeahead/The%20Big%20Bang%20Theory
+    uri: https://subz.xyz/typeahead/the%20big%20bang%20theory
   response:
     body:
       string: !!binary |
