--- a/tests/cassettes/subz/test_list_subtitles_movie_no_results.yaml
+++ b/tests/cassettes/subz/test_list_subtitles_movie_no_results.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://subz.xyz/typeahead/Ender's%20Game
+    uri: https://subz.xyz/typeahead/enders%20game
   response:
     body:
       string: !!binary |
