--- a/tests/cassettes/subz/test_list_subtitles_episode.yaml
+++ b/tests/cassettes/subz/test_list_subtitles_episode.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://subz.xyz/typeahead/Game%20of%20Thrones
+    uri: https://subz.xyz/typeahead/game%20of%20thrones
   response:
     body:
       string: !!binary |
