--- a/tests/cassettes/subz/test_list_subtitles_episode_no_results.yaml
+++ b/tests/cassettes/subz/test_list_subtitles_episode_no_results.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://subz.xyz/typeahead/Dallas
+    uri: https://subz.xyz/typeahead/dallas
   response:
     body:
       string: !!binary |
